[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MenuDeFases.gd" type="Script" id=1]
[ext_resource path="res://Artes/novinnnnnn.jpg" type="Texture" id=2]
[ext_resource path="res://Artes/voltar.png" type="Texture" id=3]
[ext_resource path="res://Sons/click_2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sons/SOM UTERO.wav" type="AudioStream" id=5]

[node name="MenuDeFases" type="Control"]
margin_right = 1365.0
margin_bottom = 745.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pulmao" type="Button" parent="."]
margin_left = 448.0
margin_top = 176.0
margin_right = 533.0
margin_bottom = 251.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Figado" type="Button" parent="."]
margin_left = 844.0
margin_top = 304.0
margin_right = 921.0
margin_bottom = 374.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColoDeUtero" type="Button" parent="."]
margin_left = 462.0
margin_top = 307.0
margin_right = 527.0
margin_bottom = 367.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instestino" type="Button" parent="."]
margin_left = 850.0
margin_top = 177.0
margin_right = 925.0
margin_bottom = 252.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="."]
margin_left = 24.0
margin_top = 658.0
margin_right = 229.0
margin_bottom = 708.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagemMenuDeFases" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 682.5, 372.429 )
scale = Vector2( 0.455, 0.372571 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SomClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SomFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ImagemBotaoVoltar" type="Sprite" parent="."]
position = Vector2( 135, 680.25 )
scale = Vector2( 0.226, 0.249 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Pulmao" to="." method="_on_Pulmao_pressed"]
[connection signal="pressed" from="Figado" to="." method="_on_Figado_pressed"]
[connection signal="pressed" from="ColoDeUtero" to="." method="_on_ColoDeUtero_pressed"]
[connection signal="pressed" from="Instestino" to="." method="_on_Instestino_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
